# seed-testing

./: Cargo.toml  README.md  index.html  schema.graphql
src/: lib.rs  model.rs  routes.rs  views.rs  workers.rs
src/graphql/: customer.graphql  customer.rs  customers.graphql
src/views/: all_customers.rs  customer.rs  home.rs  loading.rs
src/workers/: customer.rs
