[package]
name = "appname"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1.6"
futures = {version = "0.3.1", features = ['compat'] }
graphql_client = "0.8"
reqwest = { version = "0.10.0-alpha.2", features = ['json'] }
seed = "0.5"
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0.44"
wasm-bindgen = "^0.2.50"

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
